NEXT-2773 - fixed container problem with scrollbar

--- a/src/Storefront/Resources/asset/scss/themes/shopware/layout/_grid.scss
+++ b/src/Storefront/Resources/asset/scss/themes/shopware/layout/_grid.scss
@@ -13,7 +13,7 @@
 .content-main-inner {
     background: $white;
     min-height: 200px;
-    padding: 0 10px 16px;
+    padding: 0 ($grid-gutter-width / 2) 16px;
 }
 
 @include media-breakpoint-up(md) {
